refactor: refactor get user
